--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -1,5 +1,4 @@
 ar:
-  accessibility: 
   activerecord:
     attributes:
       contact:
@@ -25,9 +24,6 @@ ar:
         identifier:
           anonymous: مجهول
       update_request: NOTRANSLATE
-  anonymous: 
-  arabisch: 
-  arb: 
   cells:
     contact_people:
       dr: ".د"
@@ -303,12 +299,10 @@ ar:
             url: mailto:post@clarat.org
             var: mailto_clarat
           question: لماذا لا توجد منظمتي في كلارات؟
-  charged: 
   conf:
     current_location: موقعي
     default_latlng: 52.520007,13.404954
     default_location: برلين
-  confidential: 
   contacts:
     create:
       success: تم إرسال الرسالة بنجاح
@@ -326,11 +320,6 @@ ar:
         name_placeholder: الإسم (فرض)
         send: ارسال
         send_us_a_message: اكتب لنا رسالة
-  day_and_night: 
-  de:
-    en:
-      conf: 
-      current_location: 
   emails:
     offers_index:
       family:
@@ -370,9 +359,6 @@ ar:
       success_html: |
         لقد قمت بنجاح بإلغاء تسجيلك من الحصول على إشعارات أخرى
         (<a href="%{subscribe_href}">إعادة التسجيل</a>)
-  en:
-    conf:
-      current_location: 
   enumerize:
     search_form:
       age:
@@ -598,7 +584,6 @@ ar:
         relevance: الأهمية
   formtastic:
     required: required
-  free: 
   js:
     ajax_error:
       error: خطأ في البحث
@@ -865,20 +850,6 @@ ar:
           text: clarat.org يتم إنشائها
       callout:
         callout:
-          callout:
-            how:
-              text: 
-            refugees:
-              how:
-                heading: 
-                text: 
-              who:
-                text: 
-            what:
-              heading: 
-              text: 
-            who:
-              heading: 
           how:
             family:
               heading: كيف تعمل كلارات؟
@@ -897,34 +868,23 @@ ar:
             family:
               heading: من الذي يجد مساعدة هنا؟
               text: 'جميع الأسر في ألمانيا. هنا يجد الآباء والأمهات؛ الأبناء والحوامل. وكذلك الأصدقاء والأقارب. '
-            heading: 
             refugees:
               heading: من الذي يجد مساعدة هنا؟
               text: 'كل من لجأ إلى ألمانيا. وكذلك الأطفال والمراهقين اللاجئين. وكذلك الناس الذين يبحثون عن مساعدات للاجئين. '
         callout_neutral:
           how:
             heading: كيف نساعدك؟
-            refugees:
-              heading: 
-              text: 
             text: نحن نساعدك على إيجاد المساعدات المناسبة بالقرب منك. فنحن نقوم بترتيب عروض المساعدات ونصيغها بلغة سهلة الفهم.
           what:
             heading: ما الذي نريده؟
-            refugees:
-              heading: 
-              text: 
             text: كلارات ترشد - إلى عروض المساعدات في ألمانيا. لأننا نريد أن يجد كل فرد المساعدة التي يحتاجها.
           who:
             heading: من نحن؟
-            refugees:
-              heading: 
-              text: 
             text: نحن مشروع خيري تابع لمؤسسة بنكيزر. المؤسسة تهدف لمساعدة الأطفال والمراهقين والأسر في المواقف الصعبة
       footer:
         about: معلومات عنا
         blog: مدونة
         contact: الإتصال
-        facebook-family: 
         facebook_family: clarat family
         facebook_refugees: clarat refugees
         faq: " الأسئلة الشائعة"
@@ -970,20 +930,12 @@ ar:
             قريبا سوف نقوم بتجميع عروض مساعدات أيضا لمدن أخري. مساعدتك تسرنا:
             هل لاحظت شيئا ما؛ وترى أنه يمكننا تحسينه؟
             أو شيئا غير صحيح؟ إذن
-        more_information_overlay: 
-        send: 
         unavailable_location_modal: |
           لموقعك يوجد في كلارات حاليا عروض مساعدات عن طريق التليفون أو الإنترنت فقط
           هذا يعني أن شخصا يساعدك عن طريق التليفون أو الإنترنت
           مثلا عن طريق اللإيميل أو عن طريق الدردشة
           سوف نخبرك بكل سرور بمجرد أن يكون في كلارات مساعدات بالقرب منك
           لذلك سجل عنوان بريدك الإليكتروني هنا
-      nav_lang:
-        legal_title: في كلارات، لا يمكن قراءة النص القانوني إلا باللغة الألمانية.
-        title: |-
-          ترجمة آلية!
-          <br><br>
-          بعض النصوص في كلارات مترجمة عن طريق جوجل. هذه النصوص تبدو أحياناً غريبة أو بها أخطاء لغوية. لكننا نعمل بشكل دائم على تحسين الترجمة عن طريق مترجمين.
       navigation:
         category_headline: أو البحث عن طريق التصنيف
         claim:
@@ -1003,7 +955,6 @@ ar:
           tr: Türkçe
         section_link:
           desktop:
-            2017-07-17, visits=2: 
             family: إلي كلارات اللاجئين ›
             refugees: إلى كلارات الأسرة ›
           mobile:
@@ -1011,19 +962,9 @@ ar:
               family: إلى <span class="top-bar__emphasis">كلارات الأسرة</span> الصفحة الرئيسية
               refugees: إلى <span class="top-bar__emphasis">كلارات اللاجئين</span> الصفحة الرئيسية
             switch:
-              2017-07-17, visits=2: 
               family: إلى <span class="top-bar__emphasis">كلارات اللاجئين</span> تحول
               refugees: إلى <span class="top-bar__emphasis">كلارات الأسرة</span> تحول
         title: ترجمة فورية
-    widget:
-      category_headline: 
-  offer:
-    stamp:
-      target_audience:
-        family_acquaintances: 
-        refugees_adolescents: 
-    validations:
-      only_visible_organizations: 
   offers:
     index:
       filters:
@@ -1060,7 +1001,6 @@ ar:
           target_audience:
             children: للأطفال والشباب
             family_children: للأطفال والشبان
-            family_everyone: 
             family_nuclear_family: للأسر
             family_parents: للآباء
             family_parents_to_be: لمن سوف يصيرون والدين
@@ -1100,12 +1040,6 @@ ar:
           long: عروض خاصة بموضوع ....
           short: عروض  مساعدة ل..
     show:
-      accessibility: 
-      anonymous: 
-      charged: 
-      confidential: 
-      day_and_night: 
-      free: 
       last_update: آخر إدخال
       next_steps:
         code_word: هكذا تسمى المساعدة لدى مقدم الدعم.
@@ -1125,19 +1059,13 @@ ar:
         explanation:
           accessibility: هذا يعني أنه يمكنك هنا التنقل بسهولة بالكرسي المتحرك أو بعربة الأطفال.
           anonymous: هذا يعني أنه لا يجب عليك ذكر إسمك.
-          charged: 
           confidential: هذا يعني أن الموظفون سوف يحتفظون بكل ما تقوله سراً.
-          day_and_night: 
-          free: 
         title:
           accessibility: خالي من العوائق مناسب للكراسي المتحركة
           anonymous: مجهول
           charged: ذو تكلفة
           confidential: سري
           day_and_night: ليلاً ونهاراً
-          family_nuclear_family: 
-          family_parents: 
-          family_relatives: 
           free: مجاني
       trait_filters_headline: مزيد من المعلومات
       website_section:
@@ -1309,13 +1237,11 @@ ar:
         heading: كيف تعمل كلارات؟
         text: أكتب المشكلة التي تحتاح مساعدة في حلها, او التي تقلقك. يمكنك أيضا أن تختار من الموضوعات الموجودة لدينا, فتري في الحال كل العروض التي تقدم الدعم بالقرب منك. وكذلك تعرف أيضا, كيف تحصل على المساعدة و بأي  وسيلة إتصال, سواء عن طريق التليفون أو إرسال إيميل أو الذهاب الي عنوان ما
       meta_description:
-        2017-07-17, visits=2: 
         family: مع  clarat family تجد المساعدة بسهولة. فيها عروض دعم للاطفال والمراهقين والأسر. قائمة شاملة ومتعددة اللغات. في كل برلين وفي أنحاء ألمانيا."
         refugees: |-
           مع clarat refugees  تجد المساعدة بسهولة.
           فيها عروض دعم للاجئين. قائمة شاملة ومتعددة اللغات. بالقرب منك وفي كل المانيا.
       meta_title:
-        2017-07-17, visits=2: 
         family: إيجاد المساعدة ببساطة | كلارات العائلة
         refugees: إيجاد المساعدة ببساطة | كلارات اللاجئين
       title:
@@ -1457,6 +1383,7 @@ ar:
     widget-hg: 
     widget-start-with-a-friend: 
     widget-swaf: 
+    family: 
   shareds:
     forms:
       fill_field: من فضلك إملأ هذه الخانة
@@ -1472,21 +1399,6 @@ ar:
           family: عندما تقوم بالنقر هنا؛ تصل إلى كلارات الأسرة. وفي كلارات الأسرة يمكنك البحث عن مساعدة للأطفال والشبان والأسر.
           refugees: عندما تقوم بالنقر هنا؛ تصل إلى كلارات اللاجئين. وفي كلارات-اللاجئين يمكنك البحث عن مساعدة للاجئين
   simple_form:
-    hints:
-      contact:
-        new:
-          email: 
-          name: 
-        show:
-          email: 
-          name: 
-        show_offer:
-          email: 
-          name: 
-    placeholders:
-      search_form:
-        home:
-          query: 
     required:
       html: <abbr title="required">*</abbr>
       mark: "*"
@@ -1512,4 +1424,3 @@ ar:
     new:
       button: الرسالة وصلت
       email_placeholder: عنوان البريد الإليكتروني
-      placeholder: 
