--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1,5 +1,4 @@
 de:
-  accessibility: 
   activerecord:
     attributes:
       contact:
@@ -25,9 +24,6 @@ de:
         identifier:
           anonymous: anonym
       update_request: NOTRANSLATE
-  anonymous: 
-  arabisch: 
-  arb: 
   cells:
     contact_people:
       dr: Dr.
@@ -757,12 +753,10 @@ de:
             url: mailto:post@clarat.org
             var: mailto_clarat
           question: Warum ist meine Organisation nicht bei clarat?
-  charged: 
   conf:
     current_location: Mein Standort
     default_latlng: 52.520007,13.404954
     default_location: Berlin
-  confidential: 
   contacts:
     create:
       success: Die Nachricht wurde erfolgreich abgeschickt.
@@ -780,11 +774,6 @@ de:
         name_placeholder: Name (Pflicht)
         send: Abschicken
         send_us_a_message: Schreibe uns eine Nachricht
-  day_and_night: 
-  de:
-    en:
-      conf: 
-      current_location: 
   emails:
     offers_index:
       family:
@@ -834,9 +823,6 @@ de:
       success_html: |
         Du hast dich erfolgreich von weiteren Benachrichtigungen abgemeldet.
         (<a href="%{subscribe_href}">wieder anmelden</a>)
-  en:
-    conf:
-      current_location: 
   enumerize:
     search_form:
       age:
@@ -1062,7 +1048,6 @@ de:
         relevance: Relevance
   formtastic:
     required: required
-  free: 
   js:
     ajax_error:
       error: Suchfehler
@@ -1350,20 +1335,6 @@ de:
           text: clarat.org wird gerade aufgebaut
       callout:
         callout:
-          callout:
-            how:
-              text: 
-            refugees:
-              how:
-                heading: 
-                text: 
-              who:
-                text: 
-            what:
-              heading: 
-              text: 
-            who:
-              heading: 
           how:
             family:
               heading: Wie funktioniert clarat?
@@ -1382,34 +1353,23 @@ de:
             family:
               heading: Wer findet hier Hilfe?
               text: Alle Familien in Deutschland. Eltern, ihre Kinder und Schwangere finden hier Hilfe. Und auch Freunde und Verwandte.
-            heading: 
             refugees:
               heading: Wer findet hier Hilfe?
               text: Alle Menschen, die nach Deutschland geflüchtet sind. Auch geflüchtete Kinder und Jugendliche. Und Menschen, die Hilfe für Flüchtlinge suchen.
         callout_neutral:
           how:
             heading: Wie helfen wir?
-            refugees:
-              heading: 
-              text: 
             text: Wir helfen dir, die passende Hilfe in deiner Nähe zu finden. Wir ordnen alle Hilfen und machen sie durch einfache Sprache verständlich.
           what:
             heading: Was wollen wir?
-            refugees:
-              heading: 
-              text: 
             text: clarat klärt auf – über Hilfsangebote in Deutschland. Denn wir wollen, dass jeder die Hilfe findet, die er braucht.
           who:
             heading: Wer sind wir?
-            refugees:
-              heading: 
-              text: 
             text: Wir sind ein gemeinnütziges Projekt der Benckiser Stiftung Zukunft. Die Stiftung möchte Kindern, Jugendlichen und Familien in schwierigen Situationen helfen.
       footer:
         about: Über uns
         blog: Blog
         contact: Kontakt
-        facebook-family: 
         facebook_family: clarat family
         facebook_refugees: clarat refugees
         faq: Häufige Fragen
@@ -1455,17 +1415,12 @@ de:
             Hilfsangebote für andere Städte. Über deine Hilfe freuen wir uns:
             Hast du etwas gesehen, das wir besser machen können? Oder
             funktioniert etwas nicht richtig? Dann
-        more_information_overlay: 
-        send: 
         unavailable_location_modal: |
           Für deinen Standort gibt es bei clarat aktuell nur Telefon-Angebote
           oder Online-Angebote. Das heißt, man hilft dir am Telefon oder online.
           Zum Beispiel per E-Mail oder in einem Chat. Wir geben dir gerne
           Bescheid, sobald es bei clarat auch Hilfe in deiner Nähe gibt.
           Trage dazu deine E-Mail-Adresse hier ein.
-      nav_lang:
-        legal_title: 
-        title: 
       navigation:
         category_headline: Oder suche nach Kategorien
         claim:
@@ -1485,7 +1440,6 @@ de:
           tr: Türkçe
         section_link:
           desktop:
-            2017-07-17, visits=2: 
             family: "‹ zu clarat refugees"
             refugees: "‹ zu clarat family"
           mobile:
@@ -1493,19 +1447,9 @@ de:
               family: zur <span class="top-bar__emphasis">clarat family</span> Startseite
               refugees: zur <span class="top-bar__emphasis">clarat refugees</span> Startseite
             switch:
-              2017-07-17, visits=2: 
               family: zu <span class="top-bar__emphasis">clarat refugees</span> wechseln
               refugees: zu <span class="top-bar__emphasis">clarat family</span> wechseln
         title: Wähle deine Sprache
-    widget:
-      category_headline: 
-  offer:
-    stamp:
-      target_audience:
-        family_acquaintances: 
-        refugees_adolescents: 
-    validations:
-      only_visible_organizations: 
   offers:
     index:
       filters:
@@ -1539,7 +1483,6 @@ de:
           target_audience:
             children: für Kinder und Jugendliche
             family_children: für Kinder und Jugendliche
-            family_everyone: 
             family_nuclear_family: für Familien
             family_parents: für Eltern
             family_parents_to_be: für werdende Eltern
@@ -1580,12 +1523,6 @@ de:
           long: Angebote zum Thema …
           short: Angebote zu …
     show:
-      accessibility: 
-      anonymous: 
-      charged: 
-      confidential: 
-      day_and_night: 
-      free: 
       last_update: Eintrag zuletzt bearbeitet am
       next_steps:
         code_word: 'So heißt die Hilfe beim Anbieter:'
@@ -1605,19 +1542,13 @@ de:
         explanation:
           accessibility: Das heißt, hier kannst du dich leicht mit dem Rollstuhl bewegen. Oder mit einem Kinderwagen.
           anonymous: Das heißt, du musst deinen Namen nicht sagen.
-          charged: 
           confidential: " Das heißt, dass die Mitarbeiter alles, was du sagst, für sich behalten."
-          day_and_night: 
-          free: 
         title:
           accessibility: barrierefrei
           anonymous: anonym
           charged: kostenpflichtig
           confidential: vertraulich
           day_and_night: Tag und Nacht
-          family_nuclear_family: 
-          family_parents: 
-          family_relatives: 
           free: kostenlos
       trait_filters_headline: Weitere Informationen
       website_section:
@@ -1835,11 +1766,9 @@ de:
           Hilfe bekommst. Also ob du anrufen oder eine E-Mail schreiben sollst.
           Oder einfach vorbeigehen kannst.
       meta_description:
-        2017-07-17, visits=2: 
         family: Mit clarat family findest Du einfach Hilfe für Kinder, Jugendliche und Familien. Übersichtlich. Mehrsprachig. In ganz Berlin. Und deutschlandweit.
         refugees: 'Mit clarat refugees findest Du einfach Hilfe für Flüchtlinge. Übersichtlich. Mehrsprachig. In deiner Nähe. Und in ganz Deutschland. '
       meta_title:
-        2017-07-17, visits=2: 
         family: Einfach Hilfe finden | clarat family
         refugees: Einfach Hilfe finden | clarat refugees
       title:
@@ -1996,6 +1925,7 @@ de:
     widget-hg: widget-hg
     widget-start-with-a-friend: widget-start-with-a-friend
     widget-swaf: widget-swaf
+    family: family
   shareds:
     forms:
       fill_field: Bitte fülle dieses Feld aus
@@ -2013,21 +1943,6 @@ de:
           family: Wenn du hier klickst, kommst du zu clarat Family. In clarat Family kannst du nach Hilfe für Kinder, Jugendliche und Familien suchen.
           refugees: Wenn du hier klickst, kommst du zu clarat Refugees. In clarat-refugees kannst du nach Hilfe für Flüchtlinge suchen.
   simple_form:
-    hints:
-      contact:
-        new:
-          email: 
-          name: 
-        show:
-          email: 
-          name: 
-        show_offer:
-          email: 
-          name: 
-    placeholders:
-      search_form:
-        home:
-          query: 
     required:
       html: <abbr title="required">*</abbr>
       mark: "*"
@@ -2053,4 +1968,3 @@ de:
     new:
       button: Nachricht erhalten
       email_placeholder: E-Mail Adresse
-      placeholder: 
