--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -1,5 +1,4 @@
 tr:
-  accessibility: 
   activerecord:
     attributes:
       contact:
@@ -25,9 +24,6 @@ tr:
         identifier:
           anonymous: 
       update_request: NOTRANSLATE
-  anonymous: 
-  arabisch: 
-  arb: 
   cells:
     contact_people:
       dr: Dr.
@@ -332,12 +328,10 @@ tr:
             url: mailto:post@clarat.org
             var: mailto_clarat
           question: Benim kuruluşum neden clarat’ta değil?
-  charged: 
   conf:
     current_location: Konumum
     default_latlng: 52.520007,13.404954
     default_location: Berlin
-  confidential: 
   contacts:
     create:
       success: Mesaj başarıyla gönderilmiştir.
@@ -355,11 +349,6 @@ tr:
         name_placeholder: İsim (zorunlu)
         send: gönder
         send_us_a_message: Bize mesaj gönder
-  day_and_night: 
-  de:
-    en:
-      conf: 
-      current_location: 
   emails:
     offers_index:
       family:
@@ -388,9 +377,6 @@ tr:
       success_html: |
         E-bülten aboneliğinden başarıyla çıktın.
         (<a href="%{subscribe_href}">tekrar abone ol</a>)
-  en:
-    conf:
-      current_location: 
   enumerize:
     search_form:
       age:
@@ -616,7 +602,6 @@ tr:
         relevance: Relevance
   formtastic:
     required: required
-  free: 
   js:
     ajax_error:
       error: Arama hatası
@@ -874,20 +859,6 @@ tr:
           text: clarat.org henüz yapım aşamasındadır
       callout:
         callout:
-          callout:
-            how:
-              text: 
-            refugees:
-              how:
-                heading: 
-                text: 
-              who:
-                text: 
-            what:
-              heading: 
-              text: 
-            who:
-              heading: 
           how:
             family:
               heading: 
@@ -906,34 +877,23 @@ tr:
             family:
               heading: 
               text: 
-            heading: 
             refugees:
               heading: 
               text: 
         callout_neutral:
           how:
             heading: 
-            refugees:
-              heading: 
-              text: 
             text: 
           what:
             heading: 
-            refugees:
-              heading: 
-              text: 
             text: 
           who:
             heading: 
-            refugees:
-              heading: 
-              text: 
             text: 
       footer:
         about: Hakkımızda
         blog: Blog
         contact: İletişim
-        facebook-family: 
         facebook_family: clarat family
         facebook_refugees: clarat refugees
         faq: Sıkça sorulan sorular
@@ -977,16 +937,11 @@ tr:
             clarat.org adlı internet sayfamız henüz yenidir. Yakında başka şehirler için de yardım çeşitleri sunabileceğiz.
             Desteğinden ötürü mutlulu duyarız: Daha iyi yapabileceğimiz bir şey mi var? Ya da düzgün çalışmayan
             bir şey? o halde
-        more_information_overlay: 
-        send: 
         unavailable_location_modal: |
           Bulunduğun yer için clarat'ta şuan yalnızca telefon desteği ya da online yardımlar bulunmaktadır.
           Yani sana telefonda ya da online olarak yardım edilecektir.
           Mesela E-Mail yolu ve ya online sohbette yardım edilecektir. Bulunduğun yerde de yardım alabildiğinde, seni
           memnuniyetle bilgilendireceğiz. Bunun için E-Mail adresini buraya yazabilirsin.
-      nav_lang:
-        legal_title: Clarat'ta, yasal metin yalnızca Almanca'da okunabilir.
-        title: 
       navigation:
         category_headline: Kategoriler arasında ara
         claim:
@@ -1010,7 +965,6 @@ tr:
           tr: Türkçe
         section_link:
           desktop:
-            2017-07-17, visits=2: 
             family: 
             refugees: 
           mobile:
@@ -1018,19 +972,9 @@ tr:
               family: 
               refugees: 
             switch:
-              2017-07-17, visits=2: 
               family: 
               refugees: 
         title: Otomatik çeviriler
-    widget:
-      category_headline: 
-  offer:
-    stamp:
-      target_audience:
-        family_acquaintances: 
-        refugees_adolescents: 
-    validations:
-      only_visible_organizations: 
   offers:
     index:
       filters:
@@ -1064,7 +1008,6 @@ tr:
           target_audience:
             children: Çocuklar ve gençler için
             family_children: Çocuk ve gençler için
-            family_everyone: 
             family_nuclear_family: Aileler için
             family_parents: Ebeveynler için
             family_parents_to_be: Ebeveyn adayları için
@@ -1104,12 +1047,6 @@ tr:
           long: "… konu ile ilgili yardımlar"
           short: "… ile ilgili yardımlar"
     show:
-      accessibility: 
-      anonymous: 
-      charged: 
-      confidential: 
-      day_and_night: 
-      free: 
       last_update: Son kayıt düzenleme tarihi
       next_steps:
         code_word: Ne sorman gerekir veya sitede neyi araman gerekir?
@@ -1129,19 +1066,13 @@ tr:
         explanation:
           accessibility: 
           anonymous: 
-          charged: 
           confidential: 
-          day_and_night: 
-          free: 
         title:
           accessibility: 
           anonymous: 
           charged: 
           confidential: 
           day_and_night: 
-          family_nuclear_family: 
-          family_parents: 
-          family_relatives: 
           free: 
       trait_filters_headline: 
       website_section:
@@ -1315,11 +1246,9 @@ tr:
         heading: Clarat nasıl çalışıyor?
         text: Hangi problem için yardıma ihtiyacın olduğunu ya da hangi konunun seni rahatsız ettiğini belirle. Ayrıca menümüzdeki kategorilerden de seçebilirsin. Bu sayede sana en yakın destek önerilerini göreceksin. Sana nasıl yardım alabileceğini de anlatıyoruz. Yardım almak için telefon açabilir, mail atabilir veya şahsen ofisimize gelebilirsin.
       meta_description:
-        2017-07-17, visits=2: 
         family: 
         refugees: 
       meta_title:
-        2017-07-17, visits=2: 
         family: 
         refugees: 
       title:
@@ -1464,6 +1393,7 @@ tr:
     widget-hg: 
     widget-start-with-a-friend: 
     widget-swaf: 
+    family: 
   shareds:
     forms:
       fill_field: Lütfen bu alanı doldur
@@ -1482,21 +1412,6 @@ tr:
           family: Buraya tıkladığında clarat Family erişebilirsin. clarat Family'de çocuklar, gençler ve aileler için destek arayabilirsin.
           refugees: Buraya tıkladığında clarat Refugees'e erişebilirsin. clarat Refugees'de mülteciler için destek arayabilirsin.
   simple_form:
-    hints:
-      contact:
-        new:
-          email: 
-          name: 
-        show:
-          email: 
-          name: 
-        show_offer:
-          email: 
-          name: 
-    placeholders:
-      search_form:
-        home:
-          query: 
     required:
       html: <abbr title="required">*</abbr>
       mark: "*"
@@ -1522,4 +1437,3 @@ tr:
     new:
       button: Mesaj alınmıştır
       email_placeholder: E-Mail Adresi
-      placeholder: 
